skills alignment fixed

--- a/css/main.css
+++ b/css/main.css
@@ -302,6 +302,8 @@ li{
 .skills{
     display: flex;
     justify-content: center;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 .skill{
